--- a/hello-app/Dockerfile
+++ b/hello-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.8-alpine
+ARG VERSION
 ADD . /go/src/hello-app
-RUN go install hello-app
+RUN go install -ldflags "-X \"main.version=${VERSION}\"" hello-app
 
 FROM alpine:latest
 COPY --from=0 /go/bin/hello-app .
