Build static binary.

--- a/hello-app/Dockerfile
+++ b/hello-app/Dockerfile
@@ -1,9 +1,4 @@
-FROM golang:1.8-alpine
-ARG VERSION
-ADD . /go/src/hello-app
-RUN go install -ldflags "-X \"main.version=${VERSION}\"" hello-app
-
-FROM alpine:latest
-COPY --from=0 /go/bin/hello-app .
+FROM scratch
+COPY hello-app /
 ENV PORT 8080
-CMD ["./hello-app"]
+CMD ["/hello-app"]
