--- a/hello-app/manifests/helloweb-deployment.yaml
+++ b/hello-app/manifests/helloweb-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: hello
 spec:
+  replicas: 1
   template:
     metadata:
       labels:
@@ -24,5 +25,6 @@ spec:
       containers:
       - name: hello-app
         image: ${DOCKER_IMAGE}
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
