--- a/hello-app/Dockerfile
+++ b/hello-app/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.8-alpine AS builder
 ARG VERSION
 WORKDIR /go/src/hello-app
 ADD . /go/src/hello-app
-RUN ./run.sh build
+RUN /bin/sh ./run.sh build
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
