--- a/hello-app/manifests/helloweb-deployment.yaml
+++ b/hello-app/manifests/helloweb-deployment.yaml
@@ -27,4 +27,19 @@ spec:
         image: ${DOCKER_IMAGE}
         imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+        - name: app-port
+          containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: app-port
+            httpHeaders:
+            - name: X-Custom-Header
+              value: Awesome
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /readiness
+            port: app-port
+          periodSeconds: 10
