Use apps/v1 for deployment yaml.

--- a/hello-app/manifests/helloweb-deployment.yaml
+++ b/hello-app/manifests/helloweb-deployment.yaml
@@ -1,11 +1,15 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helloweb
   labels:
     app: hello
 spec:
-  replicas: 1
+  replicas: 3
+  selector:
+    matchLabels:
+      app: hello
+      tier: web
   template:
     metadata:
       labels:
@@ -42,4 +46,5 @@ spec:
           httpGet:
             path: /readiness
             port: app-port
+          initialDelaySeconds: 3
           periodSeconds: 10
