--- a/hello-app/manifests/helloweb-deployment.yaml
+++ b/hello-app/manifests/helloweb-deployment.yaml
@@ -25,6 +25,7 @@ spec:
                   gitsha: "${GIT_SHA}"
                 matchExpressions:
                   - {key: api, operator: In, values: [hello]}
+                  - {key: tier, operator: In, values: [web]}
               topologyKey: kubernetes.io/hostname
       containers:
       - name: hello-app
