Use build-arg of app name in Dockerfile.

--- a/hello-app/Dockerfile
+++ b/hello-app/Dockerfile
@@ -1,12 +1,14 @@
 FROM golang:1.8-alpine AS builder
 ARG APP_VERSION
-WORKDIR /go/src/hello-app
-ADD . /go/src/hello-app
+WORKDIR /build
+ADD . /build
 RUN /bin/sh ./run.sh build
 
 FROM alpine:latest
+ARG APP_NAME
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
-COPY --from=builder /go/src/hello-app/hello-app .
+COPY --from=builder /build/${APP_NAME} .
 ENV PORT 8080
-CMD ["./hello-app"]
+RUN ln -s ./${APP_NAME} app
+CMD ["./app"]
